# proyecto-cli

./: .travis.yml  Cargo.toml  README.md  dist-workspace.toml  index.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: release.yml
src/: cli.rs  main.rs  utils.rs
src/actions/: clone.rs  delete.rs  install.rs  mod.rs
src/generators/: angular.rs  auth.rs  clean_arch.rs  docker.rs  express_api.rs  ionic.rs  jest.rs  mod.rs  prisma.rs  python.rs  react.rs  router.rs  rust.rs  swagger.rs  typeorm.rs  vue.rs  winston.rs
wix/: main.wxs
