[package]
name = "create-proyect-cli"
version = "2.1.3"
edition = "2024"
authors = ["Carlos Ignacio Olano Mares"]
description = "CLI para crear proyectos rápidamente (Express, Rust, Python, Angular, Vue, React)"
repository = "https://github.com/CARLOSMARES/proyecto-cli"
homepage = "https://github.com/CARLOSMARES/proyecto-cli"
documentation = "https://github.com/CARLOSMARES/proyecto-cli"
readme = "README.md"

license = "GPL-3.0-or-later"

keywords = [
    "cli",
    "project-generator",
    "rust-cli",
    "developer-tools",
    "scaffolding"
]

categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils"
]

exclude = [
    "target/*",
    ".github/*",
    "node_modules/*"
]

[[bin]]
name = "create-proyect-cli"
path = "src/main.rs"

# ----------------------------------------

[dependencies]

# UI CLI
inquire = "0.6.2"

# spinners
spinners = "4.1.1"

# ascii logo
figlet-rs = "0.1.5"

# manejo de paths multiplataforma
dirs = "5.0"

# manejo de errores
anyhow = "1"

# serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ----------------------------------------
# optimización de binario release

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# ----------------------------------------
# configuración cargo-dist

[package.metadata.dist]

# tipos de artefactos que se publicarán
artifacts = ["executable", "zip", "msi"]

# nombre del paquete npm
npm-package = "create-proyect-cli"

# CI soportado
ci = ["github"]

# targets de compilación
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin"
]

# ----------------------------------------

[profile.dist]
inherits = "release"
lto = "thin"

# ----------------------------------------
# wix installer (Windows)

[package.metadata.wix]

upgrade-guid = "F4A7337F-9A3F-4977-B3D8-3DD36584029A"
path-guid = "538EDC30-D280-482C-923B-81308BD1AFC1"
license = false
eula = false
