[package]
name = "create-proyect-cli"
version = "2.1.9"
edition = "2024"
authors = ["Carlos Ignacio Olano Mares"]
description = "CLI para crear proyectos rápidamente (Express, Rust, Python, Angular, Vue, React)"
repository = "https://github.com/CARLOSMARES/proyecto-cli"
homepage = "https://github.com/CARLOSMARES/proyecto-cli"
documentation = "https://github.com/CARLOSMARES/proyecto-cli"
readme = "README.md"

license = "GPL-3.0-or-later"

keywords = [
    "cli",
    "project-generator",
    "rust-cli",
    "developer-tools",
    "scaffolding"
]

categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils"
]

exclude = [
    "target/*",
    ".github/*",
    "node_modules/*"
]

[[bin]]
name = "create-proyect-cli"
path = "src/main.rs"

# ----------------------------------------

[dependencies]

# UI CLI
inquire = "0.6.2"

# spinners
spinners = "4.1.1"

# ascii logo
figlet-rs = "0.1.5"

# manejo de paths multiplataforma
dirs = "5.0"

# manejo de errores
anyhow = "1"

# serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ----------------------------------------
# optimización de binario release

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# ----------------------------------------
# configuración cargo-dist

[package.metadata.dist]

# nombre del paquete npm
npm-package = "create-proyect-cli"

# FORZAR TAR.GZ EN WINDOWS PARA QUE NPM PUEDA DESCOMPRIMIRLO
windows-archive = ".tar.gz"
unix-archive = ".tar.gz"

# targets de compilación (x86_64 estándar y arm64 para Linux/Mac)
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu"
]

# ----------------------------------------

[profile.dist]
inherits = "release"
lto = "thin"

# ----------------------------------------
# wix installer (Windows)

[package.metadata.wix]

upgrade-guid = "F4A7337F-9A3F-4977-B3D8-3DD36584029A"
path-guid = "538EDC30-D280-482C-923B-81308BD1AFC1"
license = false
eula = false
